Add --as-gem option to new.
When --as-gem is passed to `new`, it will create the new project without
any of the ceedling guts in the project directoy. It will only create a
project.yml and a rakefile.rb with the proper options.

--- a/assets/project_with_guts.yml
+++ b/assets/project_with_guts.yml
@@ -44,10 +44,12 @@
     - TEST
 
 :cmock:
+  :mock_prefix: mock_
   :when_no_prototypes: :warn
   :enforce_strict_ordering: TRUE
   :plugins:
     - :ignore
+    - :callback
   :treat_as:
     uint8:    HEX8
     uint16:   HEX16
