Revert "Updated git submodule URLs to use https instead of git for anonymous cloning. Namely in TravisCI." URL remapping unnecessary, since due to the need of 'git submodule update --init --recursive' added to .travis.yml
This reverts commit bd012210cece5d18ec54639fef6fd18fb4ccc76c.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "vendor/c_exception"]
 	path = vendor/c_exception
-	url = https://github.com/ThrowTheSwitch/CException.git
+	url = git://github.com/ThrowTheSwitch/CException.git
 [submodule "vendor/unity"]
 	path = vendor/unity
-	url = https://github.com/ThrowTheSwitch/Unity.git
+	url = git://github.com/ThrowTheSwitch/Unity.git
 [submodule "vendor/cmock"]
 	path = vendor/cmock
-	url = https://github.com/ThrowTheSwitch/CMock.git     
+	url = git://github.com/ThrowTheSwitch/CMock.git
