--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "vendor/c_exception"]
 	path = vendor/c_exception
 	url = https://github.com/ThrowTheSwitch/CException.git
+	branch = master
 [submodule "vendor/unity"]
 	path = vendor/unity
 	url = https://github.com/ThrowTheSwitch/Unity.git
+	branch = master
 [submodule "vendor/cmock"]
 	path = vendor/cmock
 	url = https://github.com/ThrowTheSwitch/CMock.git     
+	branch = master
