--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
   - "1.9.3"
   - "2.0.0"
 install:
+  - gem update bundler
   - bundle install
-  - bundle update
 script:
   - bundle exec rake ci
