--- a/plugins/gcov/config/defaults.yml
+++ b/plugins/gcov/config/defaults.yml
@@ -40,4 +40,14 @@
         - --html
         - -r .
         - -o GcovCoverageResults.html
+  :gcov_post_report_basic:
+    :executable: gcovr
+    :optional: TRUE
+    :arguments:
+        - -p
+        - -b
+        - -e '^vendor.*|^build.*|^test.*|^lib.*'
+        - --html
+        - -r .
+        - -o  '${GCOV_ARTIFACTS_PATH}/GcovCoverageResults.html'
 ...
