--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 sudo: required
 language: ruby c
+
+os: 
+  - osx
+  - linux
+  
 rvm:
-  - "1.9.3"
   - "2.0.0"
-  - "2.1.8"
-  - "2.2.4"
   - "2.3.0"
 
 before_install:
   - sudo apt-get update -qq
+  
 install:
   - sudo apt-get install -qq gcc-avr binutils-avr avr-libc
   - gem update bundler
