--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,13 @@ rvm:
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then rvm install 2.1 && rvm use 2.1 && ruby -v; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq && sudo apt-get install --assume-yes --quiet gcc-multilib; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq && sudo apt-get install --assume-yes --quiet gcc-multilib && sudo apt-get install -qq gcc-avr binutils-avr avr-libc; fi
   
 install:
-  - sudo apt-get install -qq gcc-avr binutils-avr avr-libc
   - gem update bundler
   - bundle install
 
 script:
   - bundle exec rake ci
-  - mkdir examples/blinky/vendor && cd examples/blinky/vendor && ln -s ../../.. ./ceedling && cd .. && rake test:all && cd ../..
-  - mkdir examples/temp_sensor/vendor && cd examples/temp_sensor/vendor && ln -s ../../.. ./ceedling && cd .. && rake test:all && cd ../..
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then mkdir examples/blinky/vendor && cd examples/blinky/vendor && ln -s ../../.. ./ceedling && cd .. && rake test:all && cd ../..; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then mkdir examples/temp_sensor/vendor && cd examples/temp_sensor/vendor && ln -s ../../.. ./ceedling && cd .. && rake test:all && cd ../..; fi
