cleand up project.yml in example projects

--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -66,5 +66,5 @@
     - vendor/ceedling/plugins
   :enabled:
     - stdout_pretty_tests_report
-    #- stdout_ide_tests_report
+    - module_generator
 ...
