--- a/assets/project_with_guts_gcov.yml
+++ b/assets/project_with_guts_gcov.yml
@@ -10,14 +10,14 @@
   :use_test_preprocessor: TRUE
   :use_auxiliary_dependencies: TRUE
   :build_root: build
-  # :release_build: TRUE
-  :test_file_prefix: Test
+#  :release_build: TRUE
+  :test_file_prefix: test_
 
 #:release_build:
-#  :output: TempSensor.out
+#  :output: MyApp.out
 #  :use_assembly: FALSE
 
-:environment: []
+:environment:
 
 :extension:
   :executable: .out
@@ -32,7 +32,10 @@
     - test/support
 
 :defines:
-  :common: &common_defines []
+  # in order to add common defines:
+  #  1) remove the trailing [] from the :common: section
+  #  2) add entries to the :common: section (e.g. :test: has TEST defined)
+  :commmon: &common_defines []
   :test:
     - *common_defines
     - TEST
@@ -41,10 +44,12 @@
     - TEST
 
 :cmock:
+  :mock_prefix: mock_
   :when_no_prototypes: :warn
   :enforce_strict_ordering: TRUE
   :plugins:
     - :ignore
+    - :callback
   :treat_as:
     uint8:    HEX8
     uint16:   HEX16
@@ -52,19 +57,26 @@
     int8:     INT8
     bool:     UINT8
 
+:gcov:
+    :html_report_type: basic
+
 #:tools:
 # Ceedling defaults to using gcc for compiling, linking, etc.
 # As [:tools] is blank, gcc will be used (so long as it's in your system path)
 # See documentation to configure a given toolchain for use
 
-:tools_test_linker:
-  :arguments:
-    - -lm
-:tools_gcov_linker:
-  :arguments:
-    - -lm
-#:gcov:
-#  :html_report_type: basic
+# LIBRARIES
+# These libraries are automatically injected into the build process. Those specified as
+# common will be used in all types of builds. Otherwise, libraries can be injected in just
+# tests or releases. These options are MERGED with the options in supplemental yaml files.
+:libraries:
+  :placement: :end
+  :flag: "${1}"  # or "-L ${1}" for example
+  :common: &common_libraries []
+  :test:
+    - *common_libraries
+  :release:
+    - *common_libraries
 
 :plugins:
   :load_paths:
