--- a/assets/project_with_guts_gcov.yml
+++ b/assets/project_with_guts_gcov.yml
@@ -12,6 +12,9 @@
   :build_root: build
 #  :release_build: TRUE
   :test_file_prefix: test_
+  :which_ceedling: vendor/ceedling
+  :default_tasks:
+    - test:all
 
 #:release_build:
 #  :output: MyApp.out
