--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ os:
   - linux
 
 rvm:
-  - "2.0.0"
-  - "2.3.0"
+  - "2.1"
+  - "2.4"
 
 before_install:
-  - sudo pip install gcovr
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then rvm install 2.1 && rvm use 2.1 && ruby -vi; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo pip install gcovr; fi
+  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then pip2 install gcovr; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq && sudo apt-get install --assume-yes --quiet gcc-multilib && sudo apt-get install -qq gcc-avr binutils-avr avr-libc; fi
 
 install:
