Comparison between last preprocessor definitions for source files
defines_dependency.yml file in cache directory contains dependencies between source files to compile and preprocessor definitions from project.yml file. When definitions have changed then recompilation is required. To do that force_build file is created and appended it to rake build rules.

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -41,7 +41,9 @@ project_file_loader:
 project_config_manager:
   compose:
     - cacheinator
+    - configurator
     - yaml_wrapper
+    - file_wrapper
 
 cacheinator:
   compose:
