Further cleanup of dependency tracking. The only leftover at this point seems to be that some executables are ilnked when they shouldn't be necessary. Not sure why, yet.

--- a/assets/project_as_gem.yml
+++ b/assets/project_as_gem.yml
@@ -85,11 +85,8 @@
 :libraries:
   :placement: :end
   :flag: "${1}"  # or "-L ${1}" for example
-  :common: &common_libraries []
-  :test:
-    - *common_libraries
-  :release:
-    - *common_libraries
+  :test: []
+  :release: []
 
 :plugins:
   :load_paths:
