--- a/assets/project_with_guts.yml
+++ b/assets/project_with_guts.yml
@@ -85,6 +85,7 @@
 :libraries:
   :placement: :end
   :flag: "${1}"  # or "-L ${1}" for example
+  :system: []    # for example, you might list -lm to grab the math library 
   :test: []
   :release: []
 
