Cleanup to documentation posting (make it handle trickier paths). Automatically stamp new projects with the ceedling version that created them (for future use during upgrades)

--- a/assets/project_as_gem.yml
+++ b/assets/project_as_gem.yml
@@ -13,6 +13,7 @@
 #  :release_build: TRUE
   :test_file_prefix: test_
   :which_ceedling: gem
+  :ceedling_version: '?'
   :default_tasks:
     - test:all
 
