--- a/assets/project_with_guts_gcov.yml
+++ b/assets/project_with_guts_gcov.yml
@@ -68,11 +68,11 @@
 # You will need to have gcov and gcovr both installed to make it work.
 # For more information on these options, see docs in plugins/gcov
 :gcov:
-    :html_report: TRUE
-    :html_report_type: detailed
+  :reports:
+    - HtmlDetailed
+  :gcovr:
     :html_medium_threshold: 75
     :html_high_threshold: 90
-    :xml_report: FALSE
 
 #:tools:
 # Ceedling defaults to using gcc for compiling, linking, etc.
@@ -86,7 +86,7 @@
 :libraries:
   :placement: :end
   :flag: "${1}"  # or "-L ${1}" for example
-  :system: []    # for example, you might list -lm to grab the math library 
+  :system: []    # for example, you might list -lm to grab the math library
   :test: []
   :release: []
 
