--- a/assets/project_with_guts_gcov.yml
+++ b/assets/project_with_guts_gcov.yml
@@ -37,6 +37,7 @@
     - src/**
   :support:
     - test/support
+  :libraries: []
 
 :defines:
   # in order to add common defines:
@@ -86,7 +87,7 @@
 :libraries:
   :placement: :end
   :flag: "${1}"  # or "-L ${1}" for example
-  :system: []    # for example, you might list -lm to grab the math library 
+  :system: []    # for example, you might list -lm to grab the math library
   :test: []
   :release: []
 
