More documentation cleanup. Add :path_flag for libraries. default to gcc's method of including libs and paths.

--- a/assets/project_as_gem.yml
+++ b/assets/project_as_gem.yml
@@ -86,8 +86,9 @@
 # tests or releases. These options are MERGED with the options in supplemental yaml files.
 :libraries:
   :placement: :end
-  :flag: "${1}"  # or "-L ${1}" for example
-  :system: []    # for example, you might list -lm to grab the math library
+  :flag: "-l${1}"
+  :path_flag: "-L ${1}"
+  :system: []    # for example, you might list 'm' to grab the math library
   :test: []
   :release: []
 
