Find source file for auto link deep dependencies
We cannot assume that source file for header is placed in the same directory. It is better to find source by already existing file_finder.

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -253,6 +253,7 @@ preprocessinator_includes_handler:
     - file_path_utils
     - yaml_wrapper
     - file_wrapper
+    - file_finder
 
 preprocessinator_file_handler:
   compose:
