Add use_preprocessor_directives feature
Unity test runner require not-fully preprocessed file to detect some special features, like parameterized tests (TEST_CASE() or TEST_RANGE() macros).
Let use -fdirectives-only flag from gcc to expand conditional preprocessor, directives and leave the other content of file untouched. For other compilers behavior can be changed by test_file_preprocessor_directives option.

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -236,6 +236,7 @@ preprocessinator:
     - file_path_utils
     - yaml_wrapper
     - project_config_manager
+    - configurator
 
 preprocessinator_helper:
   compose:
