--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,9 @@ jobs:
       - name: Setup Ruby Testing Tools
         run: |
           sudo gem install bundler
-          sudo gem update bundler
           sudo gem install rspec
           sudo gem install rubocop -v 0.57.2
+          sudo gem update --system
           bundle install
 
       # Run Tests
