--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
           sudo gem install rspec
           sudo gem install rubocop -v 0.57.2
           sudo gem uninstall bundler
+          sudo gem update --system
           sudo gem install bundler -v 1.17.3
           bundle install
 
