--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,19 +34,13 @@ jobs:
         with: 
           submodules: recursive
 
-      # Install Ruby Testing Tools
+      # Install Ruby Testing Tools (Bundler version should match the one in Gemfile.lock)
       - name: Setup Ruby Testing Tools
         run: |
           sudo gem install rspec
           sudo gem install rubocop -v 0.57.2
-          sudo gem install bundler
-          sudo gem install rake
-          sudo gem install require_all
-          sudo gem install constructor
-          sudo gem install diy
-          sudo gem install rr
-          sudo gem install thor
-          sudo gem install deep_merge
+          sudo gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)" 
+          bundle install
 
       # Run Tests
       - name: Run All Self Tests
