--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,11 @@ jobs:
           sudo gem install bundler -v "$(grep -A 1 "BUNDLED WITH" Gemfile.lock | tail -n 1)" 
           bundle install
 
+      # Set Environment Variable Options to Allow Brackets in Rake Calls
+      - name: Configure Environment
+        run: |
+          unsetopt nomatch
+
       # Run Tests
       - name: Run All Self Tests
         run: |
