Let's prove we can build and install the gem and then use it to test the example projects

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,10 +48,10 @@ jobs:
           bundle exec rake ci
 
       # Build & Install Gem
-      #- name: Build and Install Gem
-      #  run: |
-      #    gem build ceedling.gemspec
-      #    sudo gem install --local ceedling-*.gem
+      - name: Build and Install Gem
+        run: |
+          gem build ceedling.gemspec
+          sudo gem install --local ceedling-*.gem
 
       # Run Blinky
       - name: Run Tests On Blinky Project
@@ -60,7 +60,7 @@ jobs:
           cd examples/blinky/vendor
           ln -s ../../.. ./ceedling
           cd .. 
-          bundle exec rake module:create[someNewModule] module:destroy[someNewModule] test:all
+          rake module:create[someNewModule] module:destroy[someNewModule] test:all
           cd ../..
 
       # Run Temp Sensor
@@ -70,5 +70,5 @@ jobs:
           cd examples/temp_sensor/vendor
           ln -s ../../.. ./ceedling 
           cd .. 
-          bundle exec rake module:create[someNewModule] module:destroy[someNewModule] test:all
+          rake module:create[someNewModule] module:destroy[someNewModule] test:all
           cd ../..
