Customized output directory for specific test
This approach helps to remove dependency tracking for changed defines.
Preprocessed header for mocks, output files, etc. with different defines are actually a different files even if names are the same between tests.
Let use use customized directories for test with specific configuration and standard paths when only standard defines are used and files can be shared between standard tests .

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -279,6 +279,7 @@ test_invoker:
     - build_invoker_utils
     - file_path_utils
     - file_wrapper
+    - cmock_builder
 
 test_invoker_helper:
   compose:
