--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: [2.5, 2.6, 2.7]
+        ruby: [2.5, 2.6, 2.7, 3.0]
     steps:
       # Install Binutils, Multilib, etc
       - name: Install C dev Tools
         run: |
-          sudo apt-get update -qq 
+          sudo apt-get update -qq
           sudo apt-get install --assume-yes --quiet gcc-multilib
           sudo apt-get install -qq gcc-avr binutils-avr avr-libc
 
@@ -34,7 +34,7 @@ jobs:
       # Checks out repository under $GITHUB_WORKSPACE
       - name: Checkout Latest Repo
         uses: actions/checkout@v2
-        with: 
+        with:
           submodules: recursive
 
       # Setup Ruby Testing Tools to do tests on multiple ruby version
