[Feature] Add possibility to run one test case. Part I
Enable posssibility to run single or multiple tests cases using:
   ceedling test:<test_file> --test_case=<test_case_name>

Enable filter for excluding test case name using --exclude_test_case arg:
   ceedling test:all --exclude_test_case=<test_case_name>

Update CeedlingPacket.md with information about new functionality

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -38,6 +38,10 @@ project_file_loader:
     - system_wrapper
     - file_wrapper
 
+unity_utils:
+  compose:
+     - configurator
+
 project_config_manager:
   compose:
     - cacheinator
@@ -196,6 +200,7 @@ generator:
     - streaminator
     - plugin_manager
     - file_wrapper
+    - unity_utils
 
 generator_helper:
   compose:
