--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           sudo apt-get update -qq
           sudo apt-get install --assume-yes --quiet gcc-multilib
-          sudo apt-get install -qq gcc-avr binutils-avr avr-libc
+          sudo apt-get install -qq gcc-avr binutils-avr avr-libc gdb
 
       # Install GCovr
       - name: Install GCovr
