[FEATURE] Extend use_backtrace_gdb_reporter functionality after adding cmdline_args
Add possibility to run separatelly test cases from the test file runner which crash with segmentation fault.

Add possibility to collect gcov report from test file which crash with segmentaiton fault during test execution

Update CeedlingPacket.md with information about extended functionality.

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -42,6 +42,12 @@ unity_utils:
   compose:
      - configurator
 
+debugger_utils:
+  compose:
+     - configurator
+     - tool_executor
+     - unity_utils
+
 project_config_manager:
   compose:
     - cacheinator
@@ -201,6 +207,7 @@ generator:
     - plugin_manager
     - file_wrapper
     - unity_utils
+    - debugger_utils
 
 generator_helper:
   compose:
@@ -211,6 +218,7 @@ generator_test_results:
     - configurator
     - generator_test_results_sanity_checker
     - yaml_wrapper
+    - debugger_utils
 
 generator_test_results_sanity_checker:
   compose:
