--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           sudo apt-get update -qq
           sudo apt-get install --assume-yes --quiet gcc-multilib
-          sudo apt-get install -qq gcc-avr binutils-avr avr-libc gdb
+          sudo apt-get install -qq gcc-avr binutils-avr avr-libc gdb valgrind
 
       # Install GCovr
       - name: Install GCovr
