In-progress fixes for :flags: handling
* Fixed flag lookup to apply flags to tool execution at configured build steps
* [In progress] Adding flag handling to preprocessing steps

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -256,6 +256,7 @@ preprocessinator:
 preprocessinator_includes_handler:
   compose:
     - configurator
+    - flaginator
     - tool_executor
     - task_invoker
     - file_path_utils
@@ -267,6 +268,7 @@ preprocessinator_file_handler:
   compose:
     - preprocessinator_extractor
     - configurator
+    - flaginator
     - tool_executor
     - file_path_utils
     - file_wrapper
