Thread safety improvements
- Forced Unity runner generator to be instantiated for each runner being created as brute force thread safety measure (config handling internally is not thread safe)
- Added mutex to data structure in test_context_extractor
- Removed potentially problematic and non-thread safe cacheing feature in prepprocessor_includes_handler
- Improved output messages in generator
- Removed potentially problematic rake rules files
- Broke out test and header file preprocessing with prettification features for the output

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -222,6 +222,7 @@ generator:
     - tool_executor
     - file_finder
     - file_path_utils
+    - reportinator
     - streaminator
     - plugin_manager
     - file_wrapper
