Better #include extraction + misc improvements
Include extraction:
- No longer relies on problematic temporary files
- All extraction is performed by gcc preprocessor or file read + regex
- Added fallback techniques to cover nearly all scenarios

Other improvements:
- Fixed task files:include listing & include file collection building
- Removed unnecessary directory reconstruction after clobber and removed unused dependency force_build trick
- Updated all progress messages with clearer language and a single method for creating those messages
- Removed ancient background task tool execution option that is no longer relevant
- Refactored test_context_extractor for better clarity and to meet the needs of multiple modules

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -273,19 +273,17 @@ preprocessinator:
     - configurator
     - test_context_extractor
     - streaminator
+    - reportinator
     - rake_wrapper
 
 preprocessinator_includes_handler:
   compose:
     - configurator
-    - flaginator
     - tool_executor
-    - task_invoker
-    - file_path_utils
+    - test_context_extractor
     - yaml_wrapper
-    - file_wrapper
-    - file_finder
     - streaminator
+    - reportinator
 
 preprocessinator_file_handler:
   compose:
