Added preprocessing hooks to plugin handling
- plugin & plugin_manager updated with pre/post hooks for optional preprocessing before mock generation & test runner generation
- preprocessing refactored to support new hooks
- pre_test hook moved to appropriate position in new test build pipeline
- command_hooks plugin:
  - Updated to handle new hooks
  - Improved logging
  - Documentation improvements
- Ongoing revisions and additions to CeedlingPacket & ReleaseNotes
- Improved debug logging, especially in scenarios related to YAML validation before tasks are run
- Improved new search path handling to conform to previous decisions and documentation on path prioritization
- Began introducing hash use for methods with lengthy argument lists

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -275,6 +275,7 @@ preprocessinator:
     - file_path_utils
     - file_wrapper
     - yaml_wrapper
+    - plugin_manager
     - project_config_manager
     - configurator
     - test_context_extractor
