unity_utils depends on configurator

--- a/lib/ceedling/objects.yml
+++ b/lib/ceedling/objects.yml
@@ -18,7 +18,9 @@ system_wrapper:
 reportinator:
 
 unity_utils:
-
+  compose:
+    - configurator
+    
 rake_utils:
   compose:
     - rake_wrapper
