--- a/examples/temp_sensor/project.yml
+++ b/examples/temp_sensor/project.yml
@@ -1,7 +1,7 @@
 ---
 :project:
   # how to use ceedling. If you're not sure, leave this as `gem` and `?`
-  :which_ceedling: ../ceedling
+  :which_ceedling: gem
   :ceedling_version: '?'
 
   # optional features. If you don't need them, keep them turned off for performance
